# universal_menu

./: CMakeLists.txt  args.h  main.c  makefile  readme.md
headers/: args.h  item.h  items_list.h  keys.h  macro_magic.h  menu.h  picker.h
source/: items_list.c  main.c  menu.c  picker_linux.c  picker_windows.c
